--- a/templates/lab/base.html
+++ b/templates/lab/base.html
@@ -191,6 +191,7 @@
 	<script src="{% static 'js/measurements_separation.js' %}"></script>
 	<script src="{% static 'js/d3.min.js' %}"></script>
 	<script src="{% static 'js/d3plus.min.js' %}"></script>
+	<script src="{% static 'js/experiment_page.js' %}"></script>
 	<!--script src="{% static 'js/box.js' %}"></script-->
 	</body>
 </html>
