--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -772,8 +772,8 @@
               <!--<h5><a href='/lab/log_data/genotype_results_data/'>Use Online Interface</a></h5>-->
               <h5><a href='/lab/download/template/snp_genotype_data/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/snp_genotype_data_help/'>Download Template Help</a></h5>
-              <!--<h5><a href='/lab/upload/genotype_results_data/'>Upload to Curator Queue</a></h5>
-              <h5><a href='/lab/upload_online/genotype_results_data/'>Upload Online</a></h5>-->
+              <!--<h5><a href='/lab/upload/genotype_results_data/'>Upload to Curator Queue</a></h5>-->
+              <h5><a href='/lab/upload_seq/sequence_zipfile/'>Upload Online</a></h5>
             </div>
           </div>
           <div class="span8">
