--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -767,6 +767,46 @@
         <div class="row" style="-webkit-box-shadow:2px 2px 3px 3px #888888; -moz-box-shadow:2px 2px 3px 3px #888888; box-shadow:2px 2px 3px 3px #888888; padding:15px">
           <div class="span4">
             <div class="container-fluid">
+              <h3>Add Primer Data</h3>
+              <img src='{% static '/media/site_images/primer.png' %}' />
+              <h5><a href='/lab/download/template/primer_data/'>Download Template</a></h5>
+              <h5><a href='/lab/download/template/primer_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/upload_online/primer_data/'>Upload Online</a></h5>
+            </div>
+          </div>
+          <div class="span8">
+            <h4>Dependencies</h4>
+            <hr>
+          </div>
+        </div>
+      </div>
+    </div><br/>
+
+    <div class="row">
+      <div class="container-fluid">
+        <div class="row" style="-webkit-box-shadow:2px 2px 3px 3px #888888; -moz-box-shadow:2px 2px 3px 3px #888888; box-shadow:2px 2px 3px 3px #888888; padding:15px">
+          <div class="span4">
+            <div class="container-fluid">
+              <h3>Add Marker Data</h3>
+              <img src='{% static '/media/site_images/marker.png' %}' />
+              <h5><a href='/lab/download/template/marker_data/'>Download Template</a></h5>
+              <h5><a href='/lab/download/template/marker_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/upload_online/marker_data/'>Upload Online</a></h5>
+            </div>
+          </div>
+          <div class="span8">
+            <h4>Dependencies</h4>
+            <hr>
+          </div>
+        </div>
+      </div>
+    </div><br/>
+
+    <div class="row">
+      <div class="container-fluid">
+        <div class="row" style="-webkit-box-shadow:2px 2px 3px 3px #888888; -moz-box-shadow:2px 2px 3px 3px #888888; box-shadow:2px 2px 3px 3px #888888; padding:15px">
+          <div class="span4">
+            <div class="container-fluid">
               <h3>Add SNP Genotypic Data</h3>
               <img src='{% static '/media/site_images/geno_results.jpg' %}' />
               <!--<h5><a href='/lab/log_data/genotype_results_data/'>Use Online Interface</a></h5>-->
