moved sie_images to static

--- a/templates/lab/index.html
+++ b/templates/lab/index.html
@@ -38,7 +38,7 @@
                 <h5><a href="/lab/log_data/select_obs/">Add Data</a></h5>
               </div>
               <div class="span5">
-                <img src='{% static '/media/site_images/new_experiment.jpg' %}' />
+                <img src='{% static '/site_images/new_experiment.jpg' %}' />
               </div>
             </div>
           </div>
@@ -51,7 +51,7 @@
                 <h5><a href="/lab/file_storage/">Manage Files</a></h5>
               </div>
               <div class="span5">
-                <img src='{% static '/media/site_images/files.png' %}' />
+                <img src='{% static '/site_images/files.png' %}' />
               </div>
             </div>
           </div>
