examples for upload

--- a/templates/lab/experiment.html
+++ b/templates/lab/experiment.html
@@ -77,7 +77,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/corn_seed.jpg' %}' />
+										<img src='{% static '/site_images/corn_seed.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -103,7 +103,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/seed_packet.jpg' %}' />
+										<img src='{% static '/site_images/seed_packet.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -124,7 +124,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/isolate.jpg' %}' />
+										<img src='{% static '/site_images/isolate.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -142,7 +142,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/glycerol_stock.png' %}' />
+										<img src='{% static '/site_images/glycerol_stock.png' %}' />
 									</div>
 								</div>
 							</div>
@@ -162,7 +162,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/maize_survey.jpg' %}' />
+										<img src='{% static '/site_images/maize_survey.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -180,7 +180,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/maize_row.jpg' %}' />
+										<img src='{% static '/site_images/maize_row.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -200,7 +200,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/culture.jpg' %}' />
+										<img src='{% static '/site_images/culture.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -218,7 +218,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/tissues.jpg' %}' />
+										<img src='{% static '/site_images/tissues.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -238,7 +238,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/plate.jpg' %}' />
+										<img src='{% static '/site_images/plate.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -256,7 +256,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/wells.jpg' %}' />
+										<img src='{% static '/site_images/wells.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -276,7 +276,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/dna.jpg' %}' />
+										<img src='{% static '/site_images/dna.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -294,7 +294,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/microbe.jpg' %}' />
+										<img src='{% static '/site_images/microbe.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -314,7 +314,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/environmental.jpg' %}' />
+										<img src='{% static '/site_images/environmental.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -332,7 +332,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/corn_plant.jpg' %}' />
+										<img src='{% static '/site_images/corn_plant.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -352,7 +352,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/separation.png' %}' />
+										<img src='{% static '/site_images/separation.png' %}' />
 									</div>
 								</div>
 							</div>
@@ -370,7 +370,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/sample.jpg' %}' />
+										<img src='{% static '/site_images/sample.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -390,7 +390,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/measurements.jpg' %}' />
+										<img src='{% static '/site_images/measurements.jpg' %}' />
 									</div>
 								</div>
 							</div>
@@ -408,7 +408,7 @@
 										{% endif %}
 									</div>
 									<div class="span5">
-										<img src='{% static '/media/site_images/geno_results.jpg' %}' />
+										<img src='{% static '/site_images/geno_results.jpg' %}' />
 									</div>
 								</div>
 							</div>
