--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -41,6 +41,8 @@
               <h5><a href='/lab/log_data/seed_inventory'>Use Online Interface</a></h5>
               <h5><a href='/lab/download/template/seed_stock/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/seed_stock_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/download/template/stock_used_example/'>Download Stock Used Example</a></h5>
+              <h5><a href='/lab/download/template/stock_collected_example/'>Download Stock Collected Example</a></h5>
               <h5><a href='/lab/upload_online/seed_stock/'>Upload Online</a></h5>
             </div>
           </div>
@@ -152,6 +154,7 @@
               <h5><a href='/lab/log_data/row/'>Use Online Interface</a></h5>
               <h5><a href='/lab/download/template/row_data/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/row_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/download/template/row_example/'>Download Row Example</a></h5>
               <h5><a href='/lab/upload_online/row_data/'>Upload Online</a></h5>
             </div>
           </div>
