--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -80,6 +80,7 @@
               <h5><a href='/lab/log_data/seed_packet/'>Use Online Interface</a></h5>
               <h5><a href='/lab/download/template/seed_packet/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/seed_packet_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/download/template/seed_packet_example/'>Download Seed Packet Example</a></h5>
               <h5><a href='/lab/upload_online/seed_packet/'>Upload Online</a></h5>
             </div>
           </div>
@@ -106,37 +107,6 @@
               </div>
               <div class="span4">
                 <h5><a href='/lab/log_data/seed_inventory/'>Seed Data</a></h5>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div><br/>
-
-    <div class="row">
-      <div class="container-fluid">
-        <div class="row" style="-webkit-box-shadow:2px 2px 3px 3px #888888; -moz-box-shadow:2px 2px 3px 3px #888888; box-shadow:2px 2px 3px 3px #888888; padding:15px">
-          <div class="span4">
-            <div class="container-fluid">
-              <h3>Add Maize Survey Data</h3>
-              <img src='{% static '/site_images/maize_survey.jpg' %}' />
-              <h5><a href='/lab/log_data/maize/'>Use Online Interface</a></h5>
-              <h5><a href='/lab/download/template/maize_data/'>Download Template</a></h5>
-              <h5><a href='/lab/download/template/maize_data_help/'>Download Template Help</a></h5>
-              <h5><a href='/lab/upload_online/maize_data/'>Upload Online</a></h5>
-            </div>
-          </div>
-          <div class="span8">
-            <h4>Dependencies</h4>
-            <hr>
-            <div class="row">
-              <div class="span12">
-                <img src='{% static '/site_images/locality.png' %}' />
-              </div>
-            </div>
-            <div class="row">
-              <div class="span12">
-                <h5><a href='/lab/data/locality/'>Locality</a></h5>
               </div>
             </div>
           </div>
@@ -193,11 +163,43 @@
         <div class="row" style="-webkit-box-shadow:2px 2px 3px 3px #888888; -moz-box-shadow:2px 2px 3px 3px #888888; box-shadow:2px 2px 3px 3px #888888; padding:15px">
           <div class="span4">
             <div class="container-fluid">
+              <h3>Add Maize Survey Data</h3>
+              <img src='{% static '/site_images/maize_survey.jpg' %}' />
+              <h5><a href='/lab/log_data/maize/'>Use Online Interface</a></h5>
+              <h5><a href='/lab/download/template/maize_data/'>Download Template</a></h5>
+              <h5><a href='/lab/download/template/maize_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/upload_online/maize_data/'>Upload Online</a></h5>
+            </div>
+          </div>
+          <div class="span8">
+            <h4>Dependencies</h4>
+            <hr>
+            <div class="row">
+              <div class="span12">
+                <img src='{% static '/site_images/locality.png' %}' />
+              </div>
+            </div>
+            <div class="row">
+              <div class="span12">
+                <h5><a href='/lab/data/locality/'>Locality</a></h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><br/>
+
+    <div class="row">
+      <div class="container-fluid">
+        <div class="row" style="-webkit-box-shadow:2px 2px 3px 3px #888888; -moz-box-shadow:2px 2px 3px 3px #888888; box-shadow:2px 2px 3px 3px #888888; padding:15px">
+          <div class="span4">
+            <div class="container-fluid">
               <h3>Add Plant Data</h3>
                 <img src='{% static '/site_images/corn_plant.jpg' %}' />
                 <h5><a href='/lab/log_data/plant/'>Use Online Interface</a></h5>
                 <h5><a href='/lab/download/template/plant_data/'>Download Template</a></h5>
                 <h5><a href='/lab/download/template/plant_data_help/'>Download Template Help</a></h5>
+                <h5><a href='/lab/download/template/plant_example/'>Download Plant Example</a></h5>
                 <h5><a href='/lab/upload_online/plant_data/'>Upload Online</a></h5>
             </div>
           </div>
