--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -168,6 +168,7 @@
               <h5><a href='/lab/log_data/maize/'>Use Online Interface</a></h5>
               <h5><a href='/lab/download/template/maize_data/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/maize_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/download/template/maize_example/'>Download Maize Example</a></h5>
               <h5><a href='/lab/upload_online/maize_data/'>Upload Online</a></h5>
             </div>
           </div>
