--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -238,6 +238,7 @@
               <h5><a href='/lab/log_data/tissue/'>Use Online Interface</a></h5>
               <h5><a href='/lab/download/template/tissue_data/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/tissue_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/download/template/tissue_example/'>Download Tissue Example</a></h5>
               <h5><a href='/lab/upload_online/tissue_data/'>Upload Online</a></h5>
             </div>
           </div>
