--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -282,6 +282,7 @@
               <h5><a href='/lab/log_data/culture/'>Use Online Interface</a></h5>
               <h5><a href='/lab/download/template/culture_data/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/culture_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/download/template/culture_example/'>Download Culture Example</a></h5>
               <h5><a href='/lab/upload_online/culture_data/'>Upload Online</a></h5>
             </div>
           </div>
