--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -344,6 +344,7 @@
               <h5><a href='/lab/log_data/microbe/'>Use Online Interface</a></h5>
               <h5><a href='/lab/download/template/microbe_data/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/microbe_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/download/template/microbe_example/'>Download Microbe Example</a></h5>
               <h5><a href='/lab/upload_online/microbe_data/'>Upload Online</a></h5>
             </div>
           </div>
