--- a/templates/lab/experiment.html
+++ b/templates/lab/experiment.html
@@ -232,7 +232,7 @@
 										<h3>Plate Data</h3>
 										{% if plate_data %}
 										<h5><a href='/lab/data/plate/{{experiment.name}}/'>View</a></h5>
-										<h5><a href='/lab/download/data/plate/{{experiment.name}}/'>Download</a></h5>
+										<h5><a href='/lab/download/plate/{{experiment.name}}/'>Download</a></h5>
 										{% else %}
 										<h5>No Data Available</h5>
 										{% endif %}
