--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -449,6 +449,7 @@
               <h5><a href='/lab/log_data/plate/'>Use Online Interface</a></h5>
               <h5><a href='/lab/download/template/plate_data/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/plate_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/download/template/plate_example/'>Download Plate Example</a></h5>
               <h5><a href='/lab/upload_online/plate_data/'>Upload Online</a></h5>
             </div>
           </div>
