--- a/templates/lab/experiment.html
+++ b/templates/lab/experiment.html
@@ -270,7 +270,7 @@
 										<h3>DNA Data</h3>
 										{% if dna_data %}
 										<h5><a href='/lab/data/dna/{{experiment.name}}/'>View</a></h5>
-										<h5><a href='/lab/download/data/dna/{{experiment.name}}/'>Download</a></h5>
+										<h5><a href='/lab/download/dna/{{experiment.name}}/'>Download</a></h5>
 										{% else %}
 										<h5>No Data Available</h5>
 										{% endif %}
