--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -388,6 +388,7 @@
               <h5><a href='/lab/log_data/dna/'>Use Online Interface</a></h5>
               <h5><a href='/lab/download/template/dna_data/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/dna_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/download/template/dna_example/'>Download DNA Example</a></h5>
               <h5><a href='/lab/upload_online/dna_data/'>Upload Online</a></h5>
             </div>
           </div>
