--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -482,6 +482,7 @@
               <h5><a href='/lab/log_data/well/'>Use Online Interface</a></h5>
               <h5><a href='/lab/download/template/wells_data/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/wells_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/download/template/wells_example/'>Download Wells Example</a></h5>
               <h5><a href='/lab/upload_online/well_data/'>Upload Online</a></h5>
             </div>
           </div>
