--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -532,6 +532,7 @@
               <h5><a href='/lab/log_data/environment/'>Use Online Interface</a></h5>
               <h5><a href='/lab/download/template/env_data/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/env_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/download/template/env_example/'>Download Environment Example</a></h5>
               <h5><a href='/lab/upload_online/env_data/'>Upload Online</a></h5>
             </div>
           </div>
