--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -570,6 +570,7 @@
               <h5><a href='/lab/log_data/isolate/'>Use Online Interface</a></h5>
               <h5><a href='/lab/download/template/isolate_data/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/isolate_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/download/template/isolate_example/'>Download Isolate Example</a></h5>
               <h5><a href='/lab/upload_online/isolate_data/'>Upload Online</a></h5>
             </div>
           </div>
