primer data browse

--- a/templates/lab/base.html
+++ b/templates/lab/base.html
@@ -116,6 +116,7 @@
 								<li class="nav-list"><a href='/lab/data/field/'>Field Data</a></li>
 								<li class="nav-list"><a href='/lab/data/disease_info/'>Disease Info Data</a></li>
 								<li class="nav-list"><a href='/lab/data/taxonomy/'>Taxonomy Data</a></li>
+								<li class="nav-list"><a href='/lab/data/primer/'>Primer Data</a></li>
 							</ul>
 							<!--
 							<br/>
