upload zipfile works

--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -783,6 +783,7 @@
             <div class="container-fluid">
               <h3>Add Primer Data</h3>
               <img src='{% static '/site_images/primer.png' %}' />
+              <h5><a href='/lab/log_data/primer/'>Use Online Interface</a></h5>
               <h5><a href='/lab/download/template/primer_data/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/primer_data_help/'>Download Template Help</a></h5>
               <h5><a href='/lab/upload_online/primer_data/'>Upload Online</a></h5>
@@ -826,6 +827,56 @@
               <!--<h5><a href='/lab/log_data/genotype_results_data/'>Use Online Interface</a></h5>-->
               <h5><a href='/lab/download/template/snp_genotype_data/'>Download Template</a></h5>
               <h5><a href='/lab/download/template/snp_genotype_data_help/'>Download Template Help</a></h5>
+              <!--<h5><a href='/lab/upload/genotype_results_data/'>Upload to Curator Queue</a></h5>-->
+              <!--<h5><a href='/lab/upload_seq/sequence_zipfile/'>Upload Online</a></h5>-->
+            </div>
+          </div>
+          <div class="span8">
+            <h4>Dependencies</h4>
+            <hr>
+            <div class="row">
+              <div class="span3">
+                <img src='{% static '/site_images/parameter.png' %}' />
+              </div>
+              <div class="span3">
+                <img src='{% static '/site_images/primer.png' %}' />
+              </div>
+              <div class="span3">
+                <img src='{% static '/site_images/wells.jpg' %}' />
+              </div>
+              <div class="span3">
+                <img src='{% static '/site_images/plate.jpg' %}' />
+              </div>
+            </div>
+            <div class="row">
+              <div class="span3">
+                <h5><a href='/lab/data/measurement_parameter/'>Measurement Parameter</a></h5>
+              </div>
+              <div class="span3">
+                <h5><a href='/lab/log_data/primer/'>Primer</a></h5>
+              </div>
+              <div class="span3">
+                <h5><a href='/lab/log_data/well/'>Well Data</a></h5>
+              </div>
+              <div class="span3">
+                <h5><a href='/lab/log_data/plate/'>Plate Data</a></h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><br/>
+
+    <div class="row">
+      <div class="container-fluid">
+        <div class="row" style="-webkit-box-shadow:2px 2px 3px 3px #888888; -moz-box-shadow:2px 2px 3px 3px #888888; box-shadow:2px 2px 3px 3px #888888; padding:15px">
+          <div class="span4">
+            <div class="container-fluid">
+              <h3>Add Sequencing Data</h3>
+              <img src='{% static '/site_images/geno_results.jpg' %}' />
+              <!--<h5><a href='/lab/log_data/genotype_results_data/'>Use Online Interface</a></h5>-->
+              <!--<h5><a href='/lab/download/template/snp_genotype_data/'>Download Template</a></h5>-->
+              <!--<h5><a href='/lab/download/template/snp_genotype_data_help/'>Download Template Help</a></h5>-->
               <!--<h5><a href='/lab/upload/genotype_results_data/'>Upload to Curator Queue</a></h5>-->
               <h5><a href='/lab/upload_seq/sequence_zipfile/'>Upload Online</a></h5>
             </div>
