display sequence results

--- a/templates/lab/base.html
+++ b/templates/lab/base.html
@@ -107,7 +107,7 @@
 								<li class="nav-list"><a href='/lab/data/environment/'>Environment Data</a></li>
 								<li>&nbsp;</li>
 								<li class="nav-list"><a href='/lab/data/measurement/'>Measurement Data</a></li>
-								<li class="nav-list"><a href='/lab/data/genotype/'>Genotypic Data</a></li>
+								<li class="nav-list"><a href='/lab/data/sequence/'>Sequence Data</a></li>
 								<li>&nbsp;</li>
 								<li class="nav-list"><a href='/lab/data/medium/'>Medium Data</a></li>
 								<li class="nav-list"><a href='/lab/data/measurement_parameter/'>Parameter Data</a></li>
@@ -117,6 +117,7 @@
 								<li class="nav-list"><a href='/lab/data/disease_info/'>Disease Info Data</a></li>
 								<li class="nav-list"><a href='/lab/data/taxonomy/'>Taxonomy Data</a></li>
 								<li class="nav-list"><a href='/lab/data/primer/'>Primer Data</a></li>
+								<li class="nav-list"><a href='/lab/data/marker/'>Marker Data</a></li>
 							</ul>
 							<!--
 							<br/>
