--- a/templates/lab/genotype_result_data.html
+++ b/templates/lab/genotype_result_data.html
@@ -6,6 +6,8 @@
   <h1>Genotype Result Data</h1>
 </div>
   <br />
+  <a class="btn btn-primary" href="/lab/upload_seq/sequence_zipfile/">Upload Sequences</a>
+  <br/><br/>
 
         <table id="selected_stocks" class="table table-striped table-bordered" cellspacing="0" width="100%">
           <thead>
