--- a/templates/lab/base.html
+++ b/templates/lab/base.html
@@ -108,6 +108,7 @@
 								<li>&nbsp;</li>
 								<li class="nav-list"><a href='/lab/data/measurement/'>Measurement Data</a></li>
 								<li class="nav-list"><a href='/lab/data/sequence/'>Sequence Data</a></li>
+								<li class="nav-list"><a href='/lab/data/sequence_alignment/'>Sequence Alignment</a></li>
 								<li>&nbsp;</li>
 								<li class="nav-list"><a href='/lab/data/medium/'>Medium Data</a></li>
 								<li class="nav-list"><a href='/lab/data/measurement_parameter/'>Parameter Data</a></li>
