map feature page

--- a/templates/lab/base.html
+++ b/templates/lab/base.html
@@ -105,6 +105,7 @@
 								<li class="nav-list"><a href='/lab/data/microbe/'>Microbe Data</a></li>
 								<li class="nav-list"><a href='/lab/data/sample/'>Samples Data</a></li>
 								<li class="nav-list"><a href='/lab/data/environment/'>Environment Data</a></li>
+								<li class="nav-list"><a href='/lab/data/mapfeature/'>Map Feature Data</a></li>
 								<li>&nbsp;</li>
 								<li class="nav-list"><a href='/lab/data/measurement/'>Measurement Data</a></li>
 								<li class="nav-list"><a href='/lab/data/sequence/'>Sequence Data</a></li>
