load map feature interval data

--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -802,6 +802,26 @@
         <div class="row" style="-webkit-box-shadow:2px 2px 3px 3px #888888; -moz-box-shadow:2px 2px 3px 3px #888888; box-shadow:2px 2px 3px 3px #888888; padding:15px">
           <div class="span4">
             <div class="container-fluid">
+              <h3>Add Map Feature Data</h3>
+              <img src='{% static '/site_images/geno_results.jpg' %}' />
+              <h5><a href='/lab/download/template/map_feature_interval_data/'>Download Template</a></h5>
+              <h5><a href='/lab/download/template/map_feature_interval_data_help/'>Download Template Help</a></h5>
+              <h5><a href='/lab/upload_online/map_feature_interval_data/'>Upload Online</a></h5>
+            </div>
+          </div>
+          <div class="span8">
+            <h4>Dependencies</h4>
+            <hr>
+          </div>
+        </div>
+      </div>
+    </div><br/>
+
+    <div class="row">
+      <div class="container-fluid">
+        <div class="row" style="-webkit-box-shadow:2px 2px 3px 3px #888888; -moz-box-shadow:2px 2px 3px 3px #888888; box-shadow:2px 2px 3px 3px #888888; padding:15px">
+          <div class="span4">
+            <div class="container-fluid">
               <h3>Add Marker Data</h3>
               <img src='{% static '/site_images/marker.png' %}' />
               <h5><a href='/lab/download/template/marker_data/'>Download Template</a></h5>
