--- a/templates/lab/mapfeature_data.html
+++ b/templates/lab/mapfeature_data.html
@@ -25,7 +25,7 @@
           <tbody>
           {% for data in mapfeature_data %}
           <tr>
-            <td><a href="http://ensembl.gramene.org/Zea_mays/Location/View?r={{data.map_feature_start.chromosome}}:{{data.map_feature_start.physical_position}}-{{data.map_feature_end.physical_position}}">{{data.interval_name}}</a></td>
+            <td><a href="http://ensembl.gramene.org/Zea_mays/Location/View?r={{data.map_feature_start.chromosome}}:{{data.map_feature_start.physical_position}}-{{data.map_feature_end.physical_position}}" target="_blank">{{data.interval_name}}</a></td>
             <td>{{data.interval_type}}</td>
             <td>{{data.map_feature_start.chromosome}}</td>
             <td>{{data.map_feature_start.physical_position}}</td>
