--- a/templates/lab/isolate_info.html
+++ b/templates/lab/isolate_info.html
@@ -37,7 +37,7 @@
         <td>{{ isolate_info.passport.taxonomy.alias }}</td>
         <td>{{ isolate_info.passport.taxonomy.race }}</td>
         <td>{{ isolate_info.passport.taxonomy.subtaxa }}</td>
-        <td><a href='/lab/inventory/passport/{{ isolate_info.passport.id }}/'>{{ isolate_info.passport.id }}</a></td>
+        <td><a href='/lab/passport/{{ isolate_info.passport.id }}/'>{{ isolate_info.passport.id }}</a></td>
         <td>{{ isolate_info.comments }}</td>
       </tr>
     </tbody>
