--- a/templates/lab/passport.html
+++ b/templates/lab/passport.html
@@ -5,33 +5,35 @@
   <h1>View Passport</h1>
 </div>
 {% if passport %}
-  {% if collecting_field %}
-  <hr>
-  <h3>Collected From Field</h3>
-    <table id="passport_collecting_field" class="table table-striped table-bordered" cellspacing="0" width="100%">
-      <thead>
-      <tr>
-        <th>Field Name</th>
-        <th>Locality</th>
-        <th>Date Collected</th>
-        <th>Collector</th>
-        <th>Collection Method</th>
-        <th>Comments</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td><a href='/lab/field/{{passport.collecting.field.id}}/'>{{ passport.collecting.field.field_name }}</a></td>
-        <td>{{ passport.collecting.field.locality.city }}</td>
-        <td>{{ passport.collecting.collection_date }}</td>
-        <td><a href='/lab/profile/{{ passport.collecting.user.username }}/'>{{ passport.collecting.user.username }}</a></td>
-        <td>{{ passport.collecting.collection_method }}</td>
-        <td>{{ passport.collecting.comments }}</td>
-      </tr>
-      </tbody>
-    </table>
-    {% else %}
-    <hr>
+
+<hr>
+<h3>Taxonomy Info</h3>
+  <table id="passport_collecting_info" class="table table-striped table-bordered" cellspacing="0" width="100%">
+    <thead>
+    <tr>
+      <th>Genus</th>
+      <th>Species</th>
+      <th>Population</th>
+      <th>Common Name</th>
+      <th>Alias</th>
+      <th>Race</th>
+      <th>Subtaxa</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>{{ passport.taxonomy.genus }}</td>
+      <td>{{ passport.taxonomy.species }}</td>
+      <td>{{ passport.taxonomy.population }}</td>
+      <td>{{ passport.taxonomy.common_name }}</td>
+      <td>{{ passport.taxonomy.alias }}</td>
+      <td>{{ passport.taxonomy.race }}</td>
+      <td>{{ passport.taxonomy.subtaxa }}</td>
+    </tr>
+    </tbody>
+  </table>
+<br/>
+
     <h3>Collection Info</h3>
       <table id="passport_collecting_info" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -51,50 +53,9 @@
         </tr>
         </tbody>
       </table>
-    <br/>
-  {% endif %}
-  {% if collecting_row %}
-  <h3>Collected From Row</h3>
-    <table id="passport_obsselector" class="table table-striped table-bordered" cellspacing="0" width="100%">
-      <thead>
-      <tr>
-        <th>Row ID</th>
-        <th>Experiment</th>
-        <th>Field</th>
-        <th>Locality</th>
-        <th>Source Stock</th>
-        <th>Range</th>
-        <th>Plot</th>
-        <th>Block</th>
-        <th>Rep</th>
-        <th>Planting Date</th>
-        <th>Harvest Date</th>
-        <th>Comments</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td>{{collecting_row.row_id}}</td>
-        <td><a href='/lab/experiment/{{collecting_row.obs_selector.experiment.name}}/'>{{collecting_row.obs_selector.experiment.name}}</a></td>
-        <td>{{collecting_row.field.field_name}}</td>
-        <td>{{collecting_row.field.locality.city}}</td>
-        <td><a href='/lab/stock/{{collecting_row.stock.id}}/'>{{collecting_row.stock.seed_id}}</a></td>
-        <td>{{collecting_row.range_num}}</td>
-        <td>{{collecting_row.plot}}</td>
-        <td>{{collecting_row.block}}</td>
-        <td>{{collecting_row.rep}}</td>
-        <td>{{collecting_row.planting_date}}</td>
-        <td>{{collecting_row.harvest_date}}</td>
-        <td>{{collecting_row.comments}}</td>
-      </tr>
-      </tbody>
-    </table>
-    {% else %}
-      <hr>
-      <h3>Not Collected From Row or Information Incomplete</h3>
-      <hr>
-  {% endif %}
+
   {% if collecting_source %}
+  <br/>
     <h3>Collected From Source</h3>
       <table id="passport_people" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -119,6 +80,63 @@
         </tbody>
       </table>
   {% endif %}
+
+  <br/>
+  <h3>Seed Stocks With This Passport</h3>
+  <table id="single_stock_info" class="table table-bordered" cellspacing="0" width="100%">
+    <thead>
+      <tr>
+        <th>Seed ID</th>
+        <th>Seed Name</th>
+        <th>Cross Type</th>
+        <th>Pedigree</th>
+        <th>Status</th>
+        <th>Inoculated</th>
+        <th>Stock Date</th>
+        <th>Comments</th>
+      </tr>
+    </thead>
+    <tbody>
+        {% for stock_info in stocks %}
+      <tr>
+        <td><a href='/lab/stock/{{stock_info.id}}/'>{{ stock_info.seed_id }}</a></td>
+        <td>{{ stock_info.seed_name }}</td>
+        <td>{{ stock_info.cross_type }}</td>
+        <td>{{ stock_info.pedigree }}</td>
+        <td>{{ stock_info.stock_status }}</td>
+        <td>{{ stock_info.inoculated }}</td>
+        <td>{{ stock_info.stock_date }}</td>
+        <td>{{ stock_info.comments }}</td>
+      </tr>
+        {% endfor %}
+    </tbody>
+  </table>
+
+  <br/>
+  <h3>Isolates With This Passport</h3>
+  <table id="isolate_info" class="table table-striped table-bordered" cellspacing="0" widtd="100%">
+    <thead>
+      <tr>
+        <td>Isolate ID</td>
+        <td>Isolate Name</td>
+        <td>Disease</td>
+        <td>Plant Organ</td>
+        <td>Comments</td>
+      </tr>
+    </thead>
+    <tbody>
+        {% for isolate_info in isolates %}
+      <tr>
+        <td><a href='/lab/isolate/{{isolate_info.id}}/'>{{ isolate_info.isolate_id }}</a></td>
+        <td>{{ isolate_info.isolate_name }}</td>
+        <td><a href='/lab/disease_info/{{isolate_info.disease_info.id}}/'>{{ isolate_info.disease_info.common_name }}</a></td>
+        <td>{{ isolate_info.plant_organ }}</td>
+        <td>{{ isolate_info.comments }}</td>
+      </tr>
+        {% endfor %}
+    </tbody>
+  </table>
+
   {% else %}
     <hr>
     <h2>The Passport Does Not Exist</h2><br/>
