--- a/templates/lab/log_data.html
+++ b/templates/lab/log_data.html
@@ -119,6 +119,36 @@
         <div class="row" style="-webkit-box-shadow:2px 2px 3px 3px #888888; -moz-box-shadow:2px 2px 3px 3px #888888; box-shadow:2px 2px 3px 3px #888888; padding:15px">
           <div class="span4">
             <div class="container-fluid">
+              <h3>Add NIL Seed Data</h3>
+              <img src='{% static '/site_images/corn_seed.jpg' %}' />
+              <!--h5><a href='/lab/log_data/nils_data'>Use Online Interface</a></h5-->
+              <h5><a href='/lab/download/template/nils_data/'>Download Template</a></h5>
+              <h5><a href='/lab/upload_online/nils_data/'>Upload Online</a></h5>
+            </div>
+          </div>
+          <div class="span8">
+              <h4>Dependencies</h4>
+              <hr>
+              <div class="row">
+                <div class="span4">
+                  <img src='{% static '/site_images/corn_seed.jpg' %}' />
+                </div>
+              </div>
+              <div class="row">
+                <div class="span4">
+                  <h5><a href='/lab/log_data/seed_inventory/'>Backcross Parent Seed Data</a></h5>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div><br/>
+
+    <div class="row">
+      <div class="container-fluid">
+        <div class="row" style="-webkit-box-shadow:2px 2px 3px 3px #888888; -moz-box-shadow:2px 2px 3px 3px #888888; box-shadow:2px 2px 3px 3px #888888; padding:15px">
+          <div class="span4">
+            <div class="container-fluid">
               <h3>Add Row Data</h3>
               <img src='{% static '/site_images/maize_row.jpg' %}' />
               <h5><a href='/lab/log_data/row/'>Use Online Interface</a></h5>
