--- a/templates/lab/marker_data.html
+++ b/templates/lab/marker_data.html
@@ -7,6 +7,8 @@
 </div>
   <br />
 
+    <form action="/lab/download/markers/gff3/" method="post">
+        {% csrf_token %}
         <table id="selected_stocks" class="table table-striped table-bordered" cellspacing="0" width="100%">
           <thead>
           <tr>
@@ -38,8 +40,8 @@
           </tbody>
         </table>
         <br/>
-        <button class="btn btn-primary" id="marker_select_to_gff3_submit">Create GFF3 For Selected Markers</button>
-
+        <button type="submit" class="btn btn-primary" id="marker_select_to_gff3_submit">Create GFF3 For Selected Markers</button>
+        </form>
 
 
 {% endblock %}
